# aula_20

./: README.md  docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  models.py  router.py  schemas.py
