[tool.poetry]
name = "aula-20"
version = "0.1.0"
description = ""
authors = ["Matheusinhofs <matheusfs117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.38"
pydantic = {extras = ["email"], version = "^2.10.6"}
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
